--- a/deploy-kubernetes/manifests-coaster-auth/deployment.yaml
+++ b/deploy-kubernetes/manifests-coaster-auth/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: coaster-auth
-          image: coaster-auth:1.0.0-SNAPSHOT
+          image: coaster-auth:1.0.0
           envFrom:
             - configMapRef:
                 name: coaster-auth-envs
